added a modal for create post form, implemented sorting and filtering for posts

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -25,3 +25,11 @@
 .alignCenter {
     text-align: center;
 }
+
+.separator {
+    margin: 15px 0;
+}
+
+.createUserButton {
+    margin-top: 30px
+}
