--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -33,3 +33,17 @@
 .createUserButton {
     margin-top: 30px
 }
+
+.post-enter {
+    transform: translateX(-350px);
+}
+
+.post-enter-active {
+    transform: translateX(0);
+    transition: all 500ms ease-in;
+}
+
+.post-exit-active {
+    transform: translateX(-350px);
+    transition: all 500ms ease-in;
+}
