--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -24,8 +24,14 @@
     align-items: center;
 }
 
+.post__content {
+    padding-right: 10px;
+}
+
 .post__btns {
     display: flex;
+    flex-direction: column;
+    gap: 5px;
 }
 
 .alignCenter {
@@ -87,4 +93,21 @@
 
 .navbar__links {
     margin-left: auto;
+}
+
+.navbar__links a {
+    margin-left: 10px;
+}
+
+.single-post-wrapper {
+    max-width: 800px;
+    padding: 15px;
+}
+
+.comments-title {
+    margin-top: 15px;
+}
+
+.comment {
+    margin-top: 15px;
 }
